# InteractiveHPO

./: .gitignore  Dockerfile  README.md  TODO.md  app.py  pyproject.toml  requirements.txt  run.py  strings.json  strings.py
.githooks/: pre-push
.github/workflows/: check.yml  tag-release.yml
app/: app.py  cli.py  dialogs.py  experiment.py  experiment_form.py  sidebar.py
app/analytics/: __init__.py  best_config.py  hp_importance.py  performance.py  selected_config.py
locale/de/LC_MESSAGES/: app.mo  app.po
locale/es/LC_MESSAGES/: app.mo  app.po
models/: __init__.py  base.py  random_forest.py  svm.py
optimizers/: __init__.py  base.py  grid_optimizer.py  random_optimizer.py  smac_optimizer.py
test/: test.ihpo  test2.ihpo
utils/: __init__.py  check_translations.py  io.py  strings.py
